Website name and icon, overflowx bugs are fixed.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,7 @@
 html,
 body {
   font-size: 14px;
+  overflow-x: hidden;
 }
 
 button,
